# duckdb

./: .gitignore  CMakeLists.txt  breakpoint  duckdb_benchmark_db.db.wal  rmfile.sh
benchmark/include/: duckdb_benchmark.hpp
benchmark/micro/: append.cpp
benchmark/tpch/: startup.cpp
src/include/duckdb/main/: database.hpp
src/include/duckdb/storage/: block.hpp  block_manager.hpp  in_memory_block_manager.hpp  (+2 more)
src/main/: database.cpp
src/storage/: checkpoint_manager.cpp  single_file_block_manager.cpp  storage_manager.cpp
test/: CMakeLists.txt  unittest.cpp
test/api/: test_api.cpp  test_appender_api.cpp  test_get_table_names.cpp  test_pending_query.cpp  test_prepared_api.cpp  test_progress_bar.cpp  test_query_profiler.cpp  test_relation_api.cpp  test_results.cpp  test_table_info.cpp  test_threads.cpp  test_tpch_with_relations.cpp
test/api/udf_function/: test_aggregate_udf.cpp  test_argumented_scalar_udf.cpp  test_argumented_vec_udf.cpp  test_templated_scalar_udf.cpp  test_templated_vec_udf.cpp
test/appender/: test_appender.cpp  test_appender_abort.cpp  test_appender_transactions.cpp  test_concurrent_append.cpp  test_nested_appender.cpp
test/helpers/: test_helpers.cpp
test/ossfuzz/: test_ossfuzz.cpp
test/sql/index/: test_art_index.cpp
test/sql/parallelism/interquery/: test_concurrent_dependencies.cpp  test_concurrent_index.cpp  test_concurrent_sequence.cpp  test_concurrentappend.cpp  test_concurrentdelete.cpp  test_concurrentupdate.cpp  test_default_catalog.cpp
test/sql/storage/: test_buffer_manager.cpp
test/sqlite/: result_helper.cpp
